add model class and rb extends

--- a/app/views/home/test.html
+++ b/app/views/home/test.html
@@ -1,5 +1,6 @@
 <div>
     <b>Test mode</b>
+    <?=$this->getData('ok');?>
 </div>
 <div>
     <img style="width: 180px" src="./img/cat.png" alt />
