--- a/app/views/adminMaster.html
+++ b/app/views/adminMaster.html
@@ -17,6 +17,8 @@
     <link href="./bower_components/morrisjs/morris.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="./bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!-- Materialize -->
+    <link rel="stylesheet" href="./bower_components/materialize/dist/css/materialize.min.css" />
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -58,16 +60,13 @@
     <!-- jQuery -->
     <script src="./bower_components/jquery/dist/jquery.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
     <!-- Metis Menu Plugin JavaScript -->
     <script src="./bower_components/metisMenu/dist/metisMenu.min.js"></script>
 
     <!-- Morris Charts JavaScript -->
     <script src="./bower_components/raphael/raphael.min.js"></script>
     <script src="./bower_components/morrisjs/morris.min.js"></script>
-
+    <script defer src="./bower_components/materialize/dist/js/materialize.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="./adm/js/admin.js"></script>
 </body>
