--- a/less/site/main.less
+++ b/less/site/main.less
@@ -7,8 +7,13 @@
     padding: 0;
 }
 
+html, body {
+    width: auto;
+    height: 100vh;
+}
+
 body {
-    background-color: #545c63;
+    background-color: rgba(45, 40, 40, 0.93);
     background-image: url('@{imgPath}fbg.png');
     color: #888;
 }
@@ -31,9 +36,15 @@ header {
     width: 100%;
     height: 80px;
     overflow: hidden;
-    background-color: #2f9090;
+    background-color: #ee6e73;
     color: white;
-    background-image: url('@{imgPath}hbg.png');
+    & .logo {
+        float: left;
+        width: 80px;
+        & img {
+            width: inherit;
+        }
+    }
 }
 
 header h3.welcome {
@@ -46,19 +57,24 @@ header h3.welcome {
 header ul.lang {
     list-style: none;
     float: right;
-    margin: 20px;
+    margin: 22px 0;
     & > li {
+        display: block;
         float: left;
-        width: 32px;
-        height: 32px;
+        width: 34px;
+        height: 34px;
+        border: 2px solid #f0eae4;
+        border-radius: 16px;
         filter: grayscale(20%);
-        &.ru {
-            background-image: url('@{imgPath}lang/ru.png');
+        &.active {
+            display: none;
         }
-        &.en {
-            background-image: url('@{imgPath}lang/en.png');
+        &.last {
+            display: block;
         }
         & a {
+            padding: 4px 3px;
+            vertical-align: middle;
             width: inherit;
             height: inherit;
             display: block;
@@ -67,14 +83,12 @@ header ul.lang {
 }
 
 header nav {
-    overflow: hidden;
     height: 100%;
 }
 
 header nav ul {
     list-style: none;
     float: left;
-    margin: 20px 0 0 40px;
 }
 
 header nav ul>li {
@@ -99,54 +113,42 @@ main {
 }
 
 main .view {
+    overflow: hidden;
     height: 100%;
-    padding: 24px;
     min-height: inherit;
     color: #666;
     background-color: rgba(180, 180, 180, 0.4)
 }
 
 main .page {
-    max-width: 900px;
     padding: 20px;
-    margin: 12px auto;
-    background-color: rgba(245, 245, 245, 0.9);
+    margin: 20px 0;
+    background-color: rgba(248, 248, 248, 0.96);
 }
 
 footer {
-    background-color: #545c63;
+    background-color: #444;
     background-image: url('@{imgPath}fbg.png');
     overflow: hidden;
     color: white;
-    height: 220px;
-}
-
-footer .copy {
-    margin: 12px auto;
-    padding: 12px;
-    width: 50%;
-    text-align: center;
-}
-
-footer nav {
-    float: left;
-    overflow: hidden;
-}
-
-footer nav ul {
-    list-style: none;
-    float: left;
-    margin-top: 12px;
-    margin-left: 20px;
-}
-
-footer nav ul>li {
-    float: left;
-    margin-top: 2px;
-    margin-left: 2px;
-}
-
-footer nav ul>li a {
-    font-size: 13px;
-    color: white;
+    ul.foot {
+        list-style: none;
+        display: block;
+        margin: 20px 0;
+        overflow: hidden;
+        &>li {
+            float: left;
+            margin-right: 12px;
+            & a {
+                font-size: 13px;
+                color: white;
+            }
+        }
+    }
+    & .copy-center {
+        text-align: center;
+        display: block !important;
+        background-image: url('@{imgPath}fbg.png');
+        background-color: rgba(51, 51, 51, 0.9) !important;
+    }
 }
