--- a/app/views/adminAuth/index.html
+++ b/app/views/adminAuth/index.html
@@ -1,32 +1,44 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="login-panel panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Please Sign In</h3>
+        <div class="col l6 m7 s10 offset-l3 offset-m3 offset-s1">
+            <br />
+            <br />
+            <div class="card teal z-depth-2">
+                <div class="card-content white-text">
+                    <h5 class="card-title">Please Sign In</h5>
                 </div>
-                <div class="panel-body">
+                <div class="card-content blue-grey lighten-5">
                     <form role="form" method="post" action="admin/auth/login">
-                        <fieldset>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="Password" name="password" type="password" value="">
-                            </div>
+                        <div class="input-field">
+                            <i class="material-icons prefix">account_circle</i>
+                            <input data-error="Wrong" data-success="Right" class="validate grey lighten-5" id="email" name="email" type="email" autofocus />
+                            <label for="email">E-mail</label>
+                        </div>
+                        <div class="input-field">
+                            <i class="material-icons prefix">fingerprint</i>
+                            <input class="validate grey lighten-5" id="password" name="password" type="password" value="" />
+                            <label for="password">Password</label>
+                        </div>
+                        <div class="card-action blue-grey lighten-4">
                             <div class="checkbox">
-                                <label>
-                                    <input name="remember" type="checkbox" value="Remember Me">Remember Me
-                                </label>
+                                <p>
+                                    <input type="checkbox" class="filled-in" id="filled-in-box" checked="checked" />
+                                    <label for="filled-in-box">Remember Me</label>
+                                </p>
                             </div>
-                            <input value="Login" class="btn btn-lg btn-success btn-block" type="submit" />
-                        </fieldset>
+                            <br />
+                            <div>
+                                <input value="Login" class="waves-effect waves-light btn" type="submit" />
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
             <?php if (Session::hasFlash()) : ?>
-            <div class="alert alert-danger" role="alert">
-                <span><?php Session::flash();?></span>
+            <div class="card-panel z-depth-2 red darken-1">
+                <div class="card-content white-text">
+                    <?php Session::flash();?>
+                </div>
             </div>
             <?php endif; ?>
         </div>
