--- a/app/views/adminMaster.html
+++ b/app/views/adminMaster.html
@@ -6,10 +6,10 @@
     <title>
         <?=Xiogop::app()->getTitle();?>
     </title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <link rel="shortcut icon" href="./site/img/favicon.ico?1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="author" content="Xiogoperus">
     <base href="/" />
     <!-- MetisMenu CSS -->
     <link href="./bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
@@ -18,6 +18,7 @@
     <!-- Custom Fonts -->
     <link href="./bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!-- Materialize -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="./bower_components/materialize/dist/css/materialize.min.css" />
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -26,43 +27,65 @@
     <link rel="stylesheet" href="./adm/css/main.css" />
 </head>
 
-<body>
-    <div id="wrapper">
+<body class="<?php echo Auth::isLogin() ? 'grey darken-3' : 'lime lighten-5' ?>">
+    <div class="wrapper">
         <?php if (Auth::isLogin()) : ?>
-        <header>
-            <h3 class="welcome">Welcome to Xiogop Admin Panel</h3>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="<?=Xiogop::app()->link('home', 'index');?>">
-                            <?=Lang::t('home');?>
-                        </a>
-                    </li>
-                    <li><a href="<?=Xiogop::app()->link('auth', 'logout');?>">Logout</a></li>
-                </ul>
+        <header class="red accent-1">
+            <nav class="red accent-1">
+                <div class="container">
+                    <div class="nav-wrapper">
+                        <a class="brand-logo" href="/"><img class="logo" src="./site/img/logo.png" alt /></a>
+                        <ul id="nav-mobile" class="right hide-on-med-and-down">
+                            <li>
+                                <a href="<?=Xiogop::app()->link('home', 'index');?>">Dashboard</a>
+                            </li>
+                            <li>
+                                <a href="<?=Xiogop::app()->link('news', 'index');?>">News</a>
+                            </li>
+                            <li>
+                                <a href="<?=Xiogop::app()->link('user', 'index');?>">Users</a>
+                            </li>
+                            <li>
+                                <a href="<?=Xiogop::app()->link('setting', 'index');?>">Settings</a>
+                            </li>
+                            <li>
+                                <a href="<?=Xiogop::app()->link('auth', 'logout');?>">Sign out</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
         </header>
         <?php endif; ?>
-        <main>
+        <main class="<?php echo Auth::isLogin() ? 'teal darken-1' : 'lime lighten-5' ?>">
+            <?php if (Auth::isLogin()) : ?>
+            <div class="sidebar cyan darken-3">
+                <ul class="right hide-on-med-and-down">
+                    <li>
+                        <a href="<?=Xiogop::app()->link('home', 'index');?>">Dashboard</a>
+                    </li>
+                </ul>
+            </div>
+            <?php endif; ?>
             <div class="view">
                 <?=Xiogop::app()->view->getContent('content');?>
             </div>
         </main>
         <?php if (Auth::isLogin()) : ?>
-        <footer class="footer-block overflow-hidden">
-            <div class="clear"></div>
-            <div class="copy">
-                <span>Copyright Xiogop &copy 2017</span>
+        <footer class="page-footer grey darken-3">
+            <div class="footer-copyright copy-center">
+                <div class="container">
+                    <span>Copyright Xiogop &copy 2018</span>
+                </div>
             </div>
+            <br />
         </footer>
         <?php endif; ?>
     </div>
     <!-- jQuery -->
     <script src="./bower_components/jquery/dist/jquery.min.js"></script>
-
     <!-- Metis Menu Plugin JavaScript -->
     <script src="./bower_components/metisMenu/dist/metisMenu.min.js"></script>
-
     <!-- Morris Charts JavaScript -->
     <script src="./bower_components/raphael/raphael.min.js"></script>
     <script src="./bower_components/morrisjs/morris.min.js"></script>
