--- a/app/views/master.html
+++ b/app/views/master.html
@@ -6,9 +6,13 @@
     <title>
         <?=Xiogop::app()->getTitle();?>
     </title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="title" content="<?=Xiogop::app()->getTitle();?>">
+    <meta name="description" content="">
     <base href="/" />
     <meta http-equiv="Cache-control" content="public" />
-    <link rel="shortcut icon" href="./site/img/favicon.ico?3" />
+    <link rel="shortcut icon" href="./site/img/favicon.ico?1" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="./bower_components/materialize/dist/css/materialize.css" />
     <link rel="stylesheet" href="./site/css/main.css" />
@@ -17,7 +21,7 @@
 
 <body>
     <div class="wrapper">
-        <header class="accent-1">
+        <header class="red accent-1">
             <div class="container">
                 <ul class="lang">
                     <li class="en<?=Xiogop::app()->router->getLanguage() == 'en' ? ' active' : ' last';?>">
